Platform 2.12

* Library Upgrades

  - Guava to 28.1-jre (was 28.0-jre)

Platform 2.11

* Logging

  We added a "log.queue-size" configuration option. If nonzero, the main
  launcher.log will use asynchronous logging with an in-memory queue
  of the configured maximum size. The default is "0".

* Library Upgrades

  - Jetty to 9.4.20 (was 9.4.18)

Platform 2.10

* Library Upgrades

  - jackson-databind to 2.9.9.3 (was 2.9.9.2) (fix regression in Platform 2.09)

Platform 2.09

* Launcher

  Arguments in jvm.properties that start with "-XX:+Unlock" now get moved
  earlier than other arguments in jvm.properties.

* Library Upgrades

  - jackson-databind to 2.9.9.2 (was 2.9.9.1) (CVE-2019-14379 CVE-2019-14439)

Platform 2.08

* Library Upgrades

  - jackson-databind to 2.9.9.1 (was 2.9.9) (CVE-2019-12384 CVE-2019-12814)
  - Base Docker image to proofpoint/platform-zulu-11:1.3
    based on 11.0.4 (was proofpoint/platform-zulu-8:1.2)

Platform 2.07

* Docker

  Docker images built now specify their user numerically instead of by name.

* OpenApi

  We moved the OpenApi support into the jaxrs module. The openapi module no
  longer does anything and is deprecated

* Maven plugin upgrades

 - maven-compiler-plugin to 3.8.1 (was 3.8.0)
 - maven-assembly-plugin to 3.1.1 (was 3.1.0)
 - maven-surefire-plugin to 2.22.2 (was 2.22.1)
 - maven-javadoc-plugin to 3.1.0 (was 3.0.1)
 - maven-source-plugin to 3.1.0 (was 3.0.1)
 - duplicate-finder-maven-plugin to 1.3.0 (was 1.2.1)
 - spotbugs-maven-plugin to 3.1.12 (was 3.1.8)
 - jacoco-maven-plugin to 0.8.4 (was 0.8.2)
 - modernizer-maven-plugin to 1.8.0 (was 1.7.1)
 - docker-maven-plugin to 0.30.0 (was 0.27.2)
 - plexus-compiler-javac-errorprone to 2.8.5 (was 2.8.2)
 - error_prone_core to 2.3.3 (was 2.0.21)
 - maven-invoker-plugin to 3.2.0 (was 3.1.0)
 - maven-shade-plugin to 3.2.1 (was 3.1.1)

Platform 2.06

* Bean Validation

  We replaced Apache BVal with Hibernate Validator.
