@@ -1,5 +1,11 @@
 Platform 2.12
 
+* HttpClient and HttpServer
+
+  We disabled TLS 1.1 and the ciphers TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,
+  TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA, TLS_RSA_WITH_AES_256_CBC_SHA, and
+  TLS_RSA_WITH_AES_128_CBC_SHA.
+
 * Library Upgrades
 
   - Guava to 28.1-jre (was 28.0-jre)
